# hikara

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_searcher.md
.github/workflows/: ci.yml  stale.yml
docs/: architecture.md  glossary.md  heuristics.md
examples/: basic_scan.py  webhook_sink.py
ingest-rs/: Cargo.toml  README.md
ingest-rs/src/: bundle.rs  lib.rs  mempool.rs  trace.rs
ingest-rs/tests/: classify.rs
src/hakiri/: __init__.py  cli.py  config.py
src/hakiri/ai/: __init__.py  filter.py
src/hakiri/core/: __init__.py  classify.py  score.py  types.py
src/hakiri/decode/: __init__.py  orca.py  programs.py  raydium.py  routers.py  uniswap_v2.py  uniswap_v3.py
src/hakiri/demo/: __init__.py  investigate.py  replay.py  scan.py
src/hakiri/enrich/: __init__.py  builder.py  coinbase.py  jito.py  leader.py  searcher.py
src/hakiri/ingest/: __init__.py  builder.py  geyser.py  jito_relay.py  mempool.py  trace.py
src/hakiri/output/: __init__.py  jsonl.py  stdout.py  webhook.py
src/hikara/: __init__.py  cli.py  config.py
src/hikara/ai/: __init__.py  filter.py
src/hikara/core/: __init__.py  classify.py  score.py  types.py
src/hikara/decode/: __init__.py  orca.py  programs.py  raydium.py
src/hikara/demo/: investigate.py  scan.py
src/hikara/enrich/: __init__.py  jito.py  leader.py  searcher.py
src/hikara/ingest/: __init__.py  geyser.py  trace.py
src/hikara/output/: __init__.py  jsonl.py  stdout.py  webhook.py
tests/: test_classify.py  test_config.py  test_decode.py  test_demo.py  test_output.py  test_score.py
