[package]
name = "hikara-ingest"
version = "0.3.0"
edition = "2021"
authors = ["hikara contributors"]
description = "low-level ingest crate for the hikara solana mev forensics agent"
license = "MIT"
repository = "https://github.com/hikaraagent/hikara"
readme = "README.md"
keywords = ["solana", "mev", "mempool", "forensics"]
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "hikara_ingest"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
